Made a basic Todo

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@tabler/core@latest/dist/js/tabler.min.js"></script>
-    <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="./public/scripts/index.js"></script>
   </body>
 </html>
