--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                   class="form-control mt-2"
                   placeholder="To Do…"
                   id="task"
+                  required
                 />
                 <input
                   class="form-control mb-2 mt-2"
